# fixhub-v1_r

./: .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fixhub.db  pyproject.toml  pytest.ini
.auth-inspect-tmp/: header-auth.db  switch-user-direct.db
.codex/: config.toml  setup.ps1
.codex/environments/: environment.toml
.pytest-tmp-codex/: alembic-smoke.db
.pytest-tmp-phase0_probe/: probe.db
.pytest-tmp-phase0d/test_resident_report_page_uses0/: fixhub.db
.pytest-tmp-phase0d/test_resident_triage_schedule_0/: fixhub.db
.pytest-tmp-phase0d/test_residents_cannot_add_time0/: fixhub.db
.pytest-tmp-phase0d/test_routes_use_dedicated_sche0/: fixhub.db
agents/: 04_repo_correction.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260307_0001_create_mvp_schema.py  20260307_0002_align_mvp_schema_with_readme.py  20260308_0003_work_order_completed_at_trigger.py  20260313_0001_minimal_fixhub.py  20260315_0002_location_asset_memory.py  20260319_0003_branch_status_and_handoff_metadata.py  20260319_0004_location_org_scope_and_snapshot.py  20260319_0005_operational_workflow_refactor.py  (+11 more)
app/: main.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  SECURITY.md  architecture.md  chat_context_2026-03-21.md  documentation_sop.md  known_issues.md  research_schema_civil_workflow_digital_twins.md  schema_student_living_assessment.md  todo_implementation_checklist.md  uon_student_living_maintenance_context.md  uon_student_living_maintenance_context_addendum.md
scripts/: run_codex_milestone.ps1  seed_minimal_data.py  seed_mvp.py  smoke_test_mvp.py
spec/: core.md
tests/: support.py  test_app.py  test_auth_service.py  test_demo_seed_truth.py  test_docs_freshness.py  test_event_projection.py  test_events.py  test_maintenance_coordination.py  test_manual_seed_catalog.py  test_migrations.py  test_passwords.py  test_policy.py  test_schema.py  test_stabilise.py  test_status_transition_guards.py
tmpksx0d0cb/: fixhub.db
(+73 files in other folders)
