[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixhub-v1"
version = "0.1.0"
description = "UoN Student Living maintenance coordination MVP schema"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = ["app"]