[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixhub-v1"
version = "0.1.0"
description = "Shared coordination pilot for physical maintenance work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0.48,<3.0",
  "alembic>=1.18.4,<2.0",
  "fastapi>=0.118,<1.0",
  "jinja2>=3.1.6,<4.0",
  "psycopg[binary]>=3.3.3,<4.0",
  "uvicorn>=0.37,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=9.0.2,<10.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "templates/partials/*.html", "static/*.css", "static/*.js"]


